[package]
name = "pico-ponics"
version = "0.0.1"


[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"


[dependencies]
rp2040-hal = "0.7.0"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.1"
hd44780-driver = "0.4.0"
fugit = "0.3.6"
ssd1306 = "0.7.1"
pico_ponics_lib = { path = "../pico-ponics-lib" }


[dev-dependencies]
substance-framework = "0.3.0-alpha"


[[bin]]
name = "pico-ponics-mk1"
path = "pico-ponics-mk1.rs"

